--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "babelify": "^8.0.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "classnames": "^2.2.5",
     "express": "^4.16.2",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
+    "gulp-browserify": "^0.5.1",
+    "gulp-uglify": "^3.0.0",
     "jquery": "^3.2.1",
     "mongoose": "^4.13.0",
     "nodemon": "^1.12.1",
@@ -27,13 +30,23 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build & gulp build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "server": "nodemon --exec babel-node -- build/server.js"
+    "server": "nodemon --exec babel-node -- src/server/index.js"
   },
-  "proxy": "http://localhost:3001",
-  "devDependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.26.0"
-  }
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015"
+          ],
+          "sourceMaps": false
+        }
+      ]
+    ]
+  },
+  "proxy": "http://localhost:3001"
 }
